css/others.scss
@import "base/grid-settings";
@import "neat/neat";

$blue: #477dca;
$default-iteration-count: infinite;
$default-background-color: red;


@mixin inline-block {
	display: -moz-inline-stack;
	display: inline-block;
	vertical-align: top;
	zoom: 1;
	*display: inline;
}
@mixin border-box {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
@mixin linear-transition {
	-webkit-transition: all 0.1s linear;
	-moz-transition: all 0.1s linear;
	-ms-transition: all 0.1s linear;
	-o-transition: all 0.1s linear;
	transition: all 0.1s linear;
}
@mixin hidden {
	display: none;
}

// WELCOME SCREEN

#welcome {
	width: 100%;
	//min-height: 350px;
	min-height: 200px;
	position: relative;
	padding-top: 100px;
	background-color: #333;
	background-image: url("../img/bg_main.jpg");
	background-size: cover;
	background-position: center right;
	color: #fff;
	box-sizing: content-box;
.play
	&:after {
		display: block;
		content: " ";
		position: absolute;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;
		background-color: rgba(0,0,0,0.2);
		pointer-events: none;
		z-index: 0;
	}

	.container {
		position: relative;
		z-index: 2;
	}

	.hello{
		z-index: 2;
		max-width: 700px;
		margin: 0 auto;
		position: relative;

		h1 {
			font-family: "Proxima Nova", "Open Sans", sans-serif;
			margin-top: 50px;
			margin-bottom: 20px;
			text-align: center;
			font-weight: bold;
		}
	}

	
	.button.play {
		z-index: 2;
		font-weight: 600;
		border: none;
	}


	h1, h2 {
		display: block;
	}

	h1 {
		font-size: 60px;
		font-weight: 500;
		text-align: left;
		text-transform: none;
	}

	h2 {
		text-align: center;
		font-size: 20px;
		line-height: 30px;
		font-weight: normal;
		letter-spacing: 0.01pt;

		small {
			display: block;
			font-size: 14px;
		}
	}
}

.section {
	padding: 70px 0;

	&:nth-child(even) {
		background-color: rgba(0,0,0,.03);
	}
}

.welcome {
	.container + .container {
		margin-top: 50px;
	}
}


.main_trends {
	@include row(table);
	margin: 50px auto;

	
}

a {
	text-decoration: none!important;
}

.new-course-wrapper .new-course-cover, .new-course-wrapper .new-course-description,  .new-course-wrapper .new-course-description .description{
    width: auto!important; 
}
.container{
	margin: 0;
	padding: 0;
	max-width: 100vw!important;
	min-width: 100vw!important;
}

#courses .course_card{
	width:auto!important;
}
.cards-row{

	@include media($mobile) {
		margin-left: 1vw;
		margin-right: 1vw;
	}

	@include media($tablet) {
		margin-left: 10vw;
		margin-right: 10vw;
	}

	@include media($desktop) {
		margin-left: 10vw;
		margin-right: 10vw;
	}
}
.banner_25 p{
	z-index: 10;
}

.trend {
	display: table-cell;
	width: 30%;
	margin: 0 2.5%;
	padding-top: 25px;
	padding-bottom: 25px;
	text-align: center;
	vertical-align: middle;
	padding: 25px 6.5%;
	color: currentcolor;

	&:nth-child(2n) {
		border-left: 1px solid currentcolor;
		border-right: 1px solid currentcolor;
	}

	&:last-child {
		border-right: 0;
	}

	a {
		color: white;
		border-bottom: 1px solid rgba(255,255,255,.3);

		&:hover, &:visited {
			color: white;
			border-bottom: 1px solid rgba(255,255,255,.6);
		}
	}
}

.scrolldown {
	color: white;
	z-index: 2;
	position: absolute;
	left: 0;
	right: 0;
	top: auto;
	bottom: 10px;
	margin: 0 auto;
	display: block;
	width: 20px;
	text-align: center;
	font-size: 200%;
	@include transition(all .1s ease-in-out);

	&:hover {
		opacity: .8;
		color: white;
	}
	&:visited {
		color: white;
	}
}




// ПАРТНЕРИ

#partners {
	display: block;
	position: relative;
	background-color: #fff;
	padding: 50px 0;
}

.partners_list {
	display: block;
	margin: 0 auto;
	padding: 0;
	width:100%;
	text-align: center;

	li {
		display: block;
		margin: 0;
		padding: 0;
		position: relative;
		@include inline-block;
		vertical-align: middle;
		width: 300px;
		text-align: center;

		@include media($tablet) {
			margin: 0 0 20px;
		}

		&+li {
			// margin-left: 15px;
		}

		a {
			display: block;
			text-decoration: none;
			border: 0;
			opacity: 1;
			border: 2px dotted transparent;
			padding: 10px 20px;
			border-radius: 6px;

			&:hover {
				border: 2px dotted #eee;
			}

			img {
				max-height: 50px;
			}
		}
	}
}

h2 {
	@include media($mobile) {
		font-size: 1em;
	}
	
	@include media($tablet) {
		font-size: 1.2em;
	}

	@include media($desktop) {
		font-size: 1.3em;
	}
}

.colwrap {
	margin: 0 auto;
	text-align: center;
	display: table;
}



// НОВІ МАТЕРІАЛИ

.online-learning {
	margin: 0 auto;
	text-align: center;
	display: table;
}

.description {
	p.description {
		padding: 10px 0;
		min-height: 116px;
	}
}
.ed__header,
.b-card--col {
	display: table-cell;
	width: 40%;
	max-width: 400px;
	min-height: 5em;
	margin: 0 2.5%;
	text-align: center;
	vertical-align: top;
	padding: 25px;
	color: currentcolor;
	
	a.back {
		background:#000; 
		&:hover {
			opacity:0.8;
		}
	}
	
	
	.benefits {
		padding-right: 10px;
		i {
			padding-right: 10px;
		}
	}

	.description,
	.benefits-list,
	.b-card__description,
	.b-card__list {
		padding: 10px 25px;
		max-width: 400px;
		margin: 0 auto;
	}

	.benefits-list,
	.b-card__list {
		padding: 0 auto 50px; 
		text-align: left;
		padding: 0 25px 25px;
		
		.benefits {
			i {
				margin-right: 15px;
			}
		}	
	}

}

// БЛОГ

.blog {
	background-image: url('../img/main-blog.jpg');
}

.talents-banner {
    background: linear-gradient(141deg, #ff6a00 0%, #db5c1f 51%, #e8d12c 75%);
    background: -webkit-linear-gradient(141deg, #ff6a00 0%, #db5c1f 51%, #e8d12c 75%);
    background: -moz-linear-gradient(141deg, #ff6a00 0%, #db5c1f 51%, #e8d12c 75%);
    background: -ms-linear-gradient(141deg, #ff6a00 0%, #db5c1f 51%, #e8d12c 75%);
    background: -o-linear-gradient(141deg, #ff6a00 0%, #db5c1f 51%, #e8d12c 75%);
	padding: 0!important;
}

.virtual {
	background-image: url('../img/virtual.jpg');
}

.mon-project {
	background-image: url('../img/mon.jpg');
}

.mon59-project {
	background-image: url('../img/bg_mon59.jpg');
}

#talents {
	padding-bottom: 0 !important; 
}
/* ... */

